// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor bounds demo works fine 1`] = `
<div
  class="anchor-demo"
  id="http://example.com#bounds"
>
  <div
    class="t-anchor t-size-m"
  >
    <div
      class="t-anchor_line"
    />
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-1"
        target="_self"
        title="定义"
      >
        定义
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-2"
        target="_self"
        title="服务功能"
      >
        服务功能
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-3"
        target="_self"
        title="使用指南"
      >
        使用指南
      </a>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#http://example.com#anchor-target-4"
          target="_self"
          title="创建签名"
        >
          创建签名
        </a>
      </div>
       
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#http://example.com#anchor-target-5"
          target="_self"
          title="创建内容"
        >
          创建内容
        </a>
      </div>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-6"
        target="_self"
        title="保密协议"
      >
        保密协议
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-7"
        target="_self"
        title="其他"
      >
        其他
      </a>
    </div>
  </div>
</div>
`;

exports[`Anchor default demo works fine 1`] = `
<div
  class="anchor-demo"
  id="http://example.com#default"
>
  <div
    class="t-anchor t-size-m"
  >
    <div
      class="t-anchor_line"
    />
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-1"
        target="_self"
        title="定义"
      >
        定义
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-2"
        target="_self"
        title="服务功能"
      >
        服务功能
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-3"
        target="_self"
        title="使用指南"
      >
        使用指南
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-4"
        target="_self"
        title="创建签名"
      >
        创建签名
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-5"
        target="_self"
        title="创建内容"
      >
        创建内容
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-6"
        target="_self"
        title="保密协议"
      >
        保密协议
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target-7"
        target="_self"
        title="其他"
      >
        其他
      </a>
    </div>
  </div>
</div>
`;

exports[`Anchor target demo works fine 1`] = `
<div
  class="anchor-demo"
  id="http://example.com#anchor-target"
>
  <h1
    class="t-anchor-target"
    id="http://example.com#anchor-target-1"
  >
    定义
    <div
      class="t-popup-reference t-copy"
      style="position: relative;"
    >
       
      <svg
        class="t-icon t-icon-file-copy"
      >
        <use
          xlink:href="#t-icon-file-copy"
        />
      </svg>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </h1>
   
  <h2
    class="t-anchor-target"
    id="http://example.com#anchor-target-2"
  >
    服务功能
    <div
      class="t-popup-reference t-copy"
      style="position: relative;"
    >
       
      <svg
        class="t-icon t-icon-file-copy"
      >
        <use
          xlink:href="#t-icon-file-copy"
        />
      </svg>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </h2>
   
  <h3
    class="t-anchor-target"
    id="http://example.com#anchor-target-3"
  >
    使用指南
    <div
      class="t-popup-reference t-copy"
      style="position: relative;"
    >
       
      <svg
        class="t-icon t-icon-file-copy"
      >
        <use
          xlink:href="#t-icon-file-copy"
        />
      </svg>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </h3>
   
  <h3
    class="t-anchor-target"
    id="http://example.com#anchor-target-4"
  >
    创建签名
    <div
      class="t-popup-reference t-copy"
      style="position: relative;"
    >
       
      <svg
        class="t-icon t-icon-file-copy"
      >
        <use
          xlink:href="#t-icon-file-copy"
        />
      </svg>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </h3>
   
  <h3
    class="t-anchor-target"
    id="http://example.com#anchor-target-5"
  >
    创建内容
    <div
      class="t-popup-reference t-copy"
      style="position: relative;"
    >
       
      <svg
        class="t-icon t-icon-file-copy"
      >
        <use
          xlink:href="#t-icon-file-copy"
        />
      </svg>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </h3>
   
  <h3
    class="t-anchor-target"
    id="http://example.com#anchor-target-6"
  >
    保密协议
    <div
      class="t-popup-reference t-copy"
      style="position: relative;"
    >
       
      <svg
        class="t-icon t-icon-file-copy"
      >
        <use
          xlink:href="#t-icon-file-copy"
        />
      </svg>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </h3>
   
  <h3
    class="t-anchor-target"
    id="http://example.com#anchor-target-7"
  >
    其他
    <div
      class="t-popup-reference t-copy"
      style="position: relative;"
    >
       
      <svg
        class="t-icon t-icon-file-copy"
      >
        <use
          xlink:href="#t-icon-file-copy"
        />
      </svg>
      <div
        class="resize-sensor"
        dir="ltr"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          class="resize-sensor-expand"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s;"
          />
        </div>
        <div
          class="resize-sensor-shrink"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
          />
        </div>
      </div>
    </div>
  </h3>
</div>
`;
